fixed overflow x in home page

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,6 +1,6 @@
-.app {
+/* .app {
   padding: 0;
   margin: 0;
   background: var(--background-primary-color);
   transition: background 0.5s ease, color 0.6s ease;
-}
+} */
