--- a/src/components/FeaturedProject/project.module.css
+++ b/src/components/FeaturedProject/project.module.css
@@ -217,6 +217,7 @@
 
   .image {
     height: 300px;
+    object-fit: contain;
   }
 
   .title {
